# AoC2021

./: .gitignore  aoc2021.cabal
src/: Day01.hs  Day02.hs
